--- a/index.html
+++ b/index.html
@@ -3,22 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="images/htet.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/htetbg.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
     <title>Portfolio</title>
   </head>
   <body>
-    <header id="header">
-      <h1>My Portfolio</h1>
-    </header>
-
     <nav>
-      <a href="#aboutme">About Me</a>
-      <a href="#skills">skills</a>
-      <a href="#certifications">Certifications</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact Via Email</a>
-      <a href="contact.html">Contact Via Form</a>
+      <div class="logo">
+        <a href="index.html">Portfolio</a>
+      </div>
+      <div class="nav-items">
+        <a href="#aboutme">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#certifications">Certifications</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contactmail</a>
+        <a href="contact.html">Contactform</a>
+      </div>
     </nav>
 
     <section id="aboutme">
