--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section id="aboutme">
       <h2>Who am I?</h2>
       <p>Hi there! I'm Htet, a passionate web developer.</p>
-      <img src="images/htet.jpg" alt="profile" />
+      <img src="images/htetbg.png" alt="profile" />
     </section>
     <hr class="p-hr" />
 
