--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
                 src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/d1c98974-c62d-4071-8bd2-ab859fc5f4e9"
                 alt=""
               />
-              <span>Sign in with Google</span>
+              <span class="gg" style="color:#440a0ae5 ; border: 2px;">Sign in with Google</span>
             </button>
             <button class="btn">
               <img
@@ -28,7 +28,7 @@
                 src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/59c1561b-8152-4d05-b617-0680a7629a0e"
                 alt=""
               />
-              <span>Sign in with Apple</span>
+              <span class="app" style="color: #440a0ae5; border: 2px;">Sign in with Apple</span>
             </button>
           </div>
 
