--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
@@ -15,86 +19,33 @@
   </head>
   <body>
     <nav>
-      <div class="logo">
-        <a href="index.html">Portfolio</a>
-      </div>
-      <div class="nav-items">
-        <a href="#aboutme">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#certifications">Certifications</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contactmail</a>
-        <a href="contact.html">Contactform</a>
-      </div>
-    </nav>
-
-    <section id="aboutme">
-      <h2>Who am I?</h2>
-      <p>Hi there! I'm Htet, a passionate web developer.</p>
-      <img src="images/htetbg.png" alt="profile" />
-    </section>
-    <hr class="p-hr" />
-
-    <section id="skills">
-      <h2>What I'm Good At</h2>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Bootstrap</li>
+      <div class="logo"><span class="devo">DEVO</span>ME</div>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
-    </section>
-    <hr class="p-hr" />
-
-    <section id="certifications">
-      <h2>Professional Milestones</h2>
-      <table border="1" cellspacing="0" cellpadding="10">
-        <tr>
-          <th>No.</th>
-          <th>Certification Name</th>
-          <th>Issued by</th>
-          <th>Issued Date</th>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>Web Development Fundamental</td>
-          <td>CreaNova Academy</td>
-          <td>06/12/2024</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>JS Mastery</td>
-          <td>CreaNova Academy</td>
-          <td>06/2/2025</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Frontend Development with React.js</td>
-          <td>CreaNova Academy</td>
-          <td>06/5/2025</td>
-        </tr>
-      </table>
-    </section>
-    <hr class="p-hr" />
-
-    <section id="projects">
-      <h2>My Works</h2>
-      <ol>
-        <li>Project 1: Portfolio</li>
-        <li>Project 2: Serene Sips Cafe</li>
-        <li>Project 3: CreaNova Academy Learning Center</li>
-      </ol>
-    </section>
-    <hr class="p-hr" />
-
-    <section id="contact">
-      <h2>Let's Chat</h2>
-      <p>Email: htet.passionateteacher@gmail.com</p>
-    </section>
-
-    <footer>
-      <p>copyright &copy; 2024. All Rights Reserved.</p>
-    </footer>
-
-    <a href="#header">To Top</a>
+    </nav>
+    <div class="container">
+      <div class="profile-img">
+        <img src="images/htetbg.png" alt="Profile Picture" />
+      </div>
+      <div class="content">
+        <h2>Hello I'm</h2>
+        <h1>Bingle bb</h1>
+        <p>
+          A passionate web developer focused on building responsive and
+          user-friendly websites. <br />I love turning ideas into reality with
+          clean code and modern. <br />
+          I believe in crafting websites that not only look good but also
+          deliver smooth functionality across all devices. <br />
+          Let’s create something amazing together!
+        </p>
+        <a href="contact.html" class="btn-contact">Contact Me</a>
+        <a href="#" class="btn-cv">Download CV</a>
+      </div>
+    </div>
   </body>
 </html>
