new services added

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
   <body>
     <nav>
       <div class="logo"><span class="devo">DEVO</span>ME</div>
+
       <ul class="nav-links">
         <li><a href="#">Home</a></li>
-        <li><a href="#">Services</a></li>
+        <li><a href="#my-services">Services</a></li>
+        <li><a href="#">Skills</a></li>
         <li><a href="#">Projects</a></li>
-        <li><a href="#">About</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -47,5 +48,60 @@
         <a href="#" class="btn-cv">Download CV</a>
       </div>
     </div>
+
+    <section id="my-services">
+      <h1>My Services</h1>
+      <p>
+        I am not a professional yet, but I am learning every day to improve my
+        skills and I’m excited to do so. <br />I offer web development, design,
+        and digital services to bring your ideas to life while growing along the
+        way.
+      </p>
+    </section>
+
+    <section id="services">
+      <div class="service">
+        <h2>🌐 Website Development</h2>
+        <p>Creating modern, responsive, and fast-loading websites.</p>
+      </div>
+      <div class="service">
+        <h2>💻 Frontend Development</h2>
+        <p>Building user-friendly interfaces with HTML, CSS, and JavaScript.</p>
+      </div>
+      <div class="service">
+        <h2>📱 PWA Development</h2>
+        <p>
+          Building fast, reliable, and offline-capable Progressive Web Apps for
+          a seamless user experience.
+        </p>
+      </div>
+      <div class="service">
+        <h2>🔧 WordPress Customization</h2>
+        <p>Custom themes, plugins, and website enhancements for WordPress.</p>
+      </div>
+      <div class="service">
+        <h2>🛠 Website Maintenance</h2>
+        <p>Keeping your website secure, updated, and running smoothly.</p>
+      </div>
+      <div class="service">
+        <h2>📈 SEO Optimization</h2>
+        <p>Improving search rankings to drive more organic traffic.</p>
+      </div>
+
+      <div class="service">
+        <h2>🖌 UI/UX Design</h2>
+        <p>Designing engaging and user-friendly web interfaces.</p>
+      </div>
+      <div class="service">
+        <h2>🎬 Video Editing</h2>
+        <p>Editing high-quality videos for social media and business needs.</p>
+      </div>
+    </section>
+
+    <section class="cta">
+      <h2>Let's Work Together!</h2>
+      <p>Interested in working with me? Contact me today.</p>
+      <a href="contact.html" class="btn">Get in Touch</a>
+    </section>
   </body>
 </html>
