--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   <body>
     <nav>
       <div class="logo"><span class="devo">DEVO</span>ME</div>
-
       <ul class="nav-links">
         <li><a href="#">Home</a></li>
         <li><a href="#my-services">Services</a></li>
@@ -29,7 +28,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <div class="container">
+    <section id="aboutme">
       <div class="profile-img">
         <img src="images/htetbg.png" alt="Profile Picture" />
       </div>
@@ -47,7 +46,7 @@
         <a href="contact.html" class="btn-contact">Contact Me</a>
         <a href="#" class="btn-cv">Download CV</a>
       </div>
-    </div>
+    </section>
 
     <section id="my-services">
       <h1>My Services</h1>
@@ -95,6 +94,41 @@
       <div class="service">
         <h2>🎬 Video Editing</h2>
         <p>Editing high-quality videos for social media and business needs.</p>
+      </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills">
+      <h2>My Skills</h2>
+      <div class="skills-container">
+        <div class="skill">
+          <i class="fab fa-html5"></i>
+          <h3>HTML</h3>
+        </div>
+        <div class="skill">
+          <i class="fab fa-css3-alt"></i>
+          <h3>CSS</h3>
+        </div>
+        <div class="skill">
+          <i class="fab fa-js"></i>
+          <h3>JavaScript</h3>
+        </div>
+        <div class="skill">
+          <i class="fab fa-bootstrap"></i>
+          <h3>Bootstrap</h3>
+        </div>
+        <div class="skill">
+          <i class="fab fa-wordpress"></i>
+          <h3>WordPress Development</h3>
+        </div>
+        <div class="skill">
+          <i class="fab fa-git-alt"></i>
+          <h3>Git & GitHub</h3>
+        </div>
+        <div class="skill">
+          <i class="fas fa-palette"></i>
+          <h3>Typography & Color Theory</h3>
+        </div>
       </div>
     </section>
 
