--- a/index.html
+++ b/index.html
@@ -3,139 +3,71 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="images/htetbg.png" type="image/x-icon" />
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="shortcut icon" href="images/ht.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>Portfolio</title>
   </head>
   <body>
-    <nav>
-      <div class="logo"><span class="devo">DEVO</span>ME</div>
-      <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#my-services">Services</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <section id="aboutme">
-      <div class="profile-img">
-        <img src="images/htetbg.png" alt="Profile Picture" />
+    <section class="hero">
+      <div class="container">
+        <div class="image-box">
+          <img src="images/ht.png" alt="Profile Image" />
+        </div>
+        <div class="text-box">
+          <h2>I'M BINGE BB. <br /><span class="me">WEB DEVELOPER</span></h2>
+
+          <p>
+            I'm a passionate web developer and UI/UX designer committed to
+            crafting visually stunning and highly functional digital
+            experiences. With a focus on both code and design, I aim to create
+            intuitive, user-friendly interfaces that enhance the overall user
+            experience and drive meaningful interactions.
+          </p>
+          <a href="#" class="btn">
+            <span class="text">DOWNLOAD CV</span>
+            <span class="download"><i class="fas fa-download"></i></span>
+          </a>
+        </div>
       </div>
-      <div class="content">
-        <h2>Hello I'm</h2>
-        <h1>Bingle bb</h1>
-        <p>
-          A passionate web developer focused on building responsive and
-          user-friendly websites. <br />I love turning ideas into reality with
-          clean code and modern. <br />
-          I believe in crafting websites that not only look good but also
-          deliver smooth functionality across all devices. <br />
-          Let’s create something amazing together!
-        </p>
-        <a href="contact.html" class="btn-contact">Contact Me</a>
-        <a href="#" class="btn-cv">Download CV</a>
+
+      <!-- Sidebar -->
+      <div class="sidebar">
+        <a href="#" class="home-btn">
+          <i class="fas fa-home"></i> <span>HOME</span>
+        </a>
+        <a href="#" class="about-btn">
+          <i class="fas fa-user"></i> <span>ABOUT</span>
+        </a>
+        <a href="#" class="services-btn">
+          <i class="fas fa-cogs"></i> <span>SERVICES</span>
+        </a>
+        <a href="#" class="skills-btn">
+          <i class="fas fa-lightbulb"></i> <span>SKILLS</span>
+        </a>
+        <a href="#" class="contact-btn">
+          <i class="fas fa-envelope"></i> <span>CONTACT</span>
+        </a>
       </div>
     </section>
 
-    <section id="my-services">
-      <h1>My Services</h1>
-      <p>
-        I am not a professional yet, but I am learning every day to improve my
-        skills and I’m excited to do so. <br />I offer web development, design,
-        and digital services to bring your ideas to life while growing along the
-        way.
-      </p>
-    </section>
+    <script>
+      // Toggle Sidebar on Small Screens
+      const toggleBtn = document.getElementById("toggleBtn");
+      const sidebar = document.getElementById("sidebar");
 
-    <section id="services">
-      <div class="service">
-        <h2>🌐 Website Development</h2>
-        <p>Creating modern, responsive, and fast-loading websites.</p>
-      </div>
-      <div class="service">
-        <h2>💻 Frontend Development</h2>
-        <p>Building user-friendly interfaces with HTML, CSS, and JavaScript.</p>
-      </div>
-      <div class="service">
-        <h2>📱 PWA Development</h2>
-        <p>
-          Building fast, reliable, and offline-capable Progressive Web Apps for
-          a seamless user experience.
-        </p>
-      </div>
-      <div class="service">
-        <h2>🔧 WordPress Customization</h2>
-        <p>Custom themes, plugins, and website enhancements for WordPress.</p>
-      </div>
-      <div class="service">
-        <h2>🛠 Website Maintenance</h2>
-        <p>Keeping your website secure, updated, and running smoothly.</p>
-      </div>
-      <div class="service">
-        <h2>📈 SEO Optimization</h2>
-        <p>Improving search rankings to drive more organic traffic.</p>
-      </div>
-
-      <div class="service">
-        <h2>🖌 UI/UX Design</h2>
-        <p>Designing engaging and user-friendly web interfaces.</p>
-      </div>
-      <div class="service">
-        <h2>🎬 Video Editing</h2>
-        <p>Editing high-quality videos for social media and business needs.</p>
-      </div>
-    </section>
-
-    <!-- Skills Section -->
-    <section id="skills">
-      <h2>My Skills</h2>
-      <div class="skills-container">
-        <div class="skill">
-          <i class="fab fa-html5"></i>
-          <h3>HTML</h3>
-        </div>
-        <div class="skill">
-          <i class="fab fa-css3-alt"></i>
-          <h3>CSS</h3>
-        </div>
-        <div class="skill">
-          <i class="fab fa-js"></i>
-          <h3>JavaScript</h3>
-        </div>
-        <div class="skill">
-          <i class="fab fa-bootstrap"></i>
-          <h3>Bootstrap</h3>
-        </div>
-        <div class="skill">
-          <i class="fab fa-wordpress"></i>
-          <h3>WordPress Development</h3>
-        </div>
-        <div class="skill">
-          <i class="fab fa-git-alt"></i>
-          <h3>Git & GitHub</h3>
-        </div>
-        <div class="skill">
-          <i class="fas fa-palette"></i>
-          <h3>Typography & Color Theory</h3>
-        </div>
-      </div>
-    </section>
-
-    <section class="cta">
-      <h2>Let's Work Together!</h2>
-      <p>Interested in working with me? Contact me today.</p>
-      <a href="contact.html" class="btn">Get in Touch</a>
-    </section>
+      toggleBtn.addEventListener("click", () => {
+        sidebar.classList.toggle("active");
+      });
+    </script>
   </body>
 </html>
