--- a/index.html
+++ b/index.html
@@ -39,35 +39,34 @@
           </a>
         </div>
       </div>
-
-      <!-- Sidebar -->
-      <div class="sidebar">
-        <a href="#" class="home-btn">
-          <i class="fas fa-home"></i> <span>HOME</span>
-        </a>
-        <a href="#" class="about-btn">
-          <i class="fas fa-user"></i> <span>ABOUT</span>
-        </a>
-        <a href="#" class="services-btn">
-          <i class="fas fa-cogs"></i> <span>SERVICES</span>
-        </a>
-        <a href="#" class="skills-btn">
-          <i class="fas fa-lightbulb"></i> <span>SKILLS</span>
-        </a>
-        <a href="#" class="contact-btn">
-          <i class="fas fa-envelope"></i> <span>CONTACT</span>
-        </a>
-      </div>
     </section>
+    <!-- Toggle Button -->
+    <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
+
+    <!-- Sidebar -->
+    <div class="sidebar" id="sidebar">
+      <a href="index.html" class="home-btn"
+        ><i class="fas fa-home"></i> <span>Home</span></a
+      >
+      <a href="#" class="about-btn"
+        ><i class="fas fa-user"></i> <span>About</span></a
+      >
+      <a href="#" class="services-btn"
+        ><i class="fas fa-cogs"></i> <span>Services</span></a
+      >
+      <a href="#" class="skills-btn"
+        ><i class="fas fa-lightbulb"></i> <span>Skills</span></a
+      >
+      <a href="contactform.html" class="contact-btn"
+        ><i class="fas fa-envelope"></i> <span>Contact</span></a
+      >
+    </div>
 
     <script>
-      // Toggle Sidebar on Small Screens
-      const toggleBtn = document.getElementById("toggleBtn");
-      const sidebar = document.getElementById("sidebar");
-
-      toggleBtn.addEventListener("click", () => {
-        sidebar.classList.toggle("active");
-      });
+      function toggleSidebar() {
+        let sidebar = document.getElementById("sidebar");
+        sidebar.classList.toggle("show");
+      }
     </script>
   </body>
 </html>
