--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BB-Home</title>
+    <title>Home - BB</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="images/ht.png" type="image/x-icon" />
     <link
