--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
       <a href="index.html" class="home-btn"
         ><i class="fas fa-home"></i> <span>Home</span></a
       >
-      <a href="#" class="about-btn"
+      <a href="about.html" class="about-btn"
         ><i class="fas fa-user"></i> <span>About</span></a
+      >
+      <a href="#" class="skills-btn"
+        ><i class="fas fa-project-diagram"></i> <span>Projects</span></a
       >
       <a href="#" class="services-btn"
         ><i class="fas fa-cogs"></i> <span>Services</span></a
       >
-      <a href="#" class="skills-btn"
-        ><i class="fas fa-lightbulb"></i> <span>Skills</span></a
-      >
-      <a href="contactform.html" class="contact-btn"
+      <a href="contactme.html" class="contact-btn"
         ><i class="fas fa-envelope"></i> <span>Contact</span></a
       >
     </div>
