--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
       src="https://kit.fontawesome.com/a076d05399.js"
       crossorigin="anonymous"
     ></script>
+   
   </head>
   <body>
     <div class="contact-wrapper">
@@ -64,6 +65,59 @@
         </div>
     </div>
  
+<section class="skills-section">
+  <h2>MY SKILLS</h2>
+  <div class="skills-container">
+    <div class="skill">
+      <div class="progress-circle" style="--progress: 25%;" data-progress="25">
+        <span class="percentage">25%</span>
+      </div>
+      <p>HTML</p>
+    </div>
+    <div class="skill">
+      <div class="progress-circle" style="--progress: 89%;" data-progress="89">
+        <span class="percentage">89%</span>
+      </div>
+      <p>JAVASCRIPT</p>
+    </div>
+    <div class="skill">
+      <div class="progress-circle" style="--progress: 70%;" data-progress="70">
+        <span class="percentage">70%</span>
+      </div>
+      <p>CSS</p>
+    </div>
+    <div class="skill">
+      <div class="progress-circle" style="--progress: 66%;" data-progress="66">
+        <span class="percentage">66%</span>
+      </div>
+      <p>PHP</p>
+    </div>
+    <div class="skill">
+      <div class="progress-circle" style="--progress: 95%;" data-progress="95">
+        <span class="percentage">95%</span>
+      </div>
+      <p>WORDPRESS</p>
+    </div>
+    <div class="skill">
+      <div class="progress-circle" style="--progress: 50%;" data-progress="50">
+        <span class="percentage">50%</span>
+      </div>
+      <p>JQUERY</p>
+    </div>
+    <div class="skill">
+      <div class="progress-circle" style="--progress: 65%;" data-progress="65">
+        <span class="percentage">65%</span>
+      </div>
+      <p>ANGULAR</p>
+    </div>
+    <div class="skill">
+      <div class="progress-circle" style="--progress: 45%;" data-progress="45">
+        <span class="percentage">45%</span>
+      </div>
+      <p>REACT</p>
+    </div>
+  </div>
+</section>
 
     <!-- Toggle Button -->
     <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
@@ -93,5 +147,6 @@
         sidebar.classList.toggle("show");
       }
     </script>
+   
   </body>
 </html>
