--- a/about.html
+++ b/about.html
@@ -65,59 +65,52 @@
         </div>
     </div>
  
-<section class="skills-section">
-  <h2>MY SKILLS</h2>
-  <div class="skills-container">
-    <div class="skill">
-      <div class="progress-circle" style="--progress: 25%;" data-progress="25">
-        <span class="percentage">25%</span>
+    <!-- skills section -->
+    <section class="skills-section">
+      <h2 class="section-title">My Skills</h2>
+      <p class="section-description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget purus
+        lectus viverra in semper nec pretium mus.
+      </p>
+
+      <div class="skills-container">
+        <div class="skill-card">
+          <i class="fa-brands fa-html5"></i>
+          <h3>HTML</h3>
+          <p>The backbone of web pages, used to structure and organize content on the web.</p>
+        </div>
+
+        <div class="skill-card">
+          <i class="fa-brands fa-css3-alt"></i>
+          <h3>CSS</h3>
+          <p>Styles websites with colors, layouts, and animations for a visually appealing experience.</p>
+        </div>
+
+        <div class="skill-card">
+          <i class="fa-brands fa-js fa-3x"></i>
+          <h3>JavaScript</h3>
+          <p>A versatile language that adds interactivity, animations, and dynamic behavior to websites.</p>
+        </div>
+
+        <div class="skill-card">
+          <i class="fa-brands fa-bootstrap"></i>
+          <h3>Bootstrap</h3>
+          <p>A popular front-end framework that helps create responsive and mobile-friendly websites quickly.</p>
+        </div>
+
+        <div class="skill-card">
+          <i class="fa-brands fa-git-alt"></i>
+          <h3>Git & GitHub</h3>
+          <p>Git is a version control system for tracking code changes. GitHub is a platform for hosting and collaborating on Git repositories.</p>
+        </div>
+
+        <div class="skill-card">
+          <i class="fa-brands fa-wordpress"></i>
+          <h3>WordPress</h3>
+          <p>A powerful content management system (CMS) for building websites and blogs with ease.</p>
+        </div>
       </div>
-      <p>HTML</p>
-    </div>
-    <div class="skill">
-      <div class="progress-circle" style="--progress: 89%;" data-progress="89">
-        <span class="percentage">89%</span>
-      </div>
-      <p>JAVASCRIPT</p>
-    </div>
-    <div class="skill">
-      <div class="progress-circle" style="--progress: 70%;" data-progress="70">
-        <span class="percentage">70%</span>
-      </div>
-      <p>CSS</p>
-    </div>
-    <div class="skill">
-      <div class="progress-circle" style="--progress: 66%;" data-progress="66">
-        <span class="percentage">66%</span>
-      </div>
-      <p>PHP</p>
-    </div>
-    <div class="skill">
-      <div class="progress-circle" style="--progress: 95%;" data-progress="95">
-        <span class="percentage">95%</span>
-      </div>
-      <p>WORDPRESS</p>
-    </div>
-    <div class="skill">
-      <div class="progress-circle" style="--progress: 50%;" data-progress="50">
-        <span class="percentage">50%</span>
-      </div>
-      <p>JQUERY</p>
-    </div>
-    <div class="skill">
-      <div class="progress-circle" style="--progress: 65%;" data-progress="65">
-        <span class="percentage">65%</span>
-      </div>
-      <p>ANGULAR</p>
-    </div>
-    <div class="skill">
-      <div class="progress-circle" style="--progress: 45%;" data-progress="45">
-        <span class="percentage">45%</span>
-      </div>
-      <p>REACT</p>
-    </div>
-  </div>
-</section>
+    </section>
 
     <!-- Toggle Button -->
     <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
