--- a/contactme.html
+++ b/contactme.html
@@ -36,11 +36,15 @@
           </div>
 
           <div class="social-icons">
-            <a href="#" target="_self"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_self"><i class="fab fa-twitter"></i></a>
-            <a href="#" target="_self"
-              ><i class="fa-brands fa-instagram"></i
-            ></a>
+            <a href="https://facebook.com/your-username" target="_self">
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a href="https://github.com/bingle-bb" target="_self">
+              <i class="fab fa-github"></i>
+            </a>
+            <a href="https://instagram.com/your-username" target="_self">
+              <i class="fab fa-instagram"></i>
+            </a>
             <a href="#" target="_self"><i class="fa-brands fa-telegram"></i></a>
           </div>
         </div>
