--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
  
     <!-- skills section -->
     <section class="skills-section">
-      <h2 class="section-title">My Skills</h2>
+      <h2 class="section-title">MY SKILLS</h2>
       <p class="section-description">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget purus
         lectus viverra in semper nec pretium mus.
@@ -126,7 +126,7 @@
       <a href="#" class="skills-btn"
         ><i class="fas fa-project-diagram"></i> <span>Projects</span></a
       >
-      <a href="#" class="services-btn"
+      <a href="services.html" class="services-btn"
         ><i class="fas fa-cogs"></i> <span>Services</span></a
       >
       <a href="contactme.html" class="contact-btn"
