--- a/contactme.html
+++ b/contactme.html
@@ -73,7 +73,7 @@
           <a href="#" class="skills-btn"
             ><i class="fas fa-project-diagram"></i> <span>Projects</span></a
           >
-          <a href="#" class="services-btn"
+          <a href="services.html" class="services-btn"
             ><i class="fas fa-cogs"></i> <span>Services</span></a
           >
           <a href="contactform.html" class="contact-btn"
