--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <a href="#" class="skills-btn"
         ><i class="fas fa-project-diagram"></i> <span>Projects</span></a
       >
-      <a href="#" class="services-btn"
+      <a href="services.html" class="services-btn"
         ><i class="fas fa-cogs"></i> <span>Services</span></a
       >
       <a href="contactme.html" class="contact-btn"
