--- a/sidebar.html
+++ b/sidebar.html
@@ -3,14 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sidebar</title>
+    <title>SIDE_BAR</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="images/ht.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Poppins", sans-serif;
+    }
+
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #111;
+      color: white;
+    }
     /* Sidebar */
     .sidebar {
       position: fixed;
@@ -47,11 +67,10 @@
       position: absolute;
       right: 15px;
     }
-
     /* Hide Text Initially */
     .sidebar a span {
       position: absolute;
-      right: 60px;
+      right: 50px;
       white-space: nowrap;
       opacity: 0;
       transition: opacity 0.3s ease-in-out;
@@ -135,6 +154,15 @@
         display: block; /* Show on small screens */
       }
     }
+    @media (max-width: 768px) {
+      .contact-container {
+        flex-direction: column;
+      }
+      .contact-info,
+      .contact-form {
+        width: 100%;
+      }
+    }
   </style>
   <body>
     <!-- Toggle Button -->
@@ -145,16 +173,16 @@
       <a href="index.html" class="home-btn"
         ><i class="fas fa-home"></i> <span>Home</span></a
       >
-      <a href="#" class="about-btn"
+      <a href="about.html" class="about-btn"
         ><i class="fas fa-user"></i> <span>About</span></a
+      >
+      <a href="#" class="skills-btn"
+        ><i class="fas fa-project-diagram"></i> <span>Projects</span></a
       >
       <a href="#" class="services-btn"
         ><i class="fas fa-cogs"></i> <span>Services</span></a
       >
-      <a href="#" class="skills-btn"
-        ><i class="fas fa-lightbulb"></i> <span>Skills</span></a
-      >
-      <a href="contactform.html" class="contact-btn"
+      <a href="contactme.html" class="contact-btn"
         ><i class="fas fa-envelope"></i> <span>Contact</span></a
       >
     </div>
