--- a/about.html
+++ b/about.html
@@ -68,11 +68,6 @@
     <!-- skills section -->
     <section class="skills-section">
       <h2 class="section-title">MY SKILLS</h2>
-      <p class="section-description">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget purus
-        lectus viverra in semper nec pretium mus.
-      </p>
-
       <div class="skills-container">
         <div class="skill-card">
           <i class="fa-brands fa-html5"></i>
@@ -111,7 +106,170 @@
         </div>
       </div>
     </section>
+    
+    <!-- EXPERIENCE & EDUCATION section -->
+    <header class="EXPERIENCE">
+      <h1 class="timeline-header">EXPERIENCE & EDUCATION</h1>
+    </header>
+    <section class="timeline">
+      <!-- Work Experience -->
+      <div class="timeline-item">
+        <div class="icon-container"><i class="fas fa-briefcase"></i></div>
+        <span class="date">2025 - Present</span>
+        <div class="title">Web Developer</div>
+        <div class="company">Envato</div>
+        <div class="description">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        </div>
+      </div>
 
+      <!-- Education -->
+      <div class="timeline-item">
+        <div class="icon-container"><i class="fas fa-graduation-cap"></i></div>
+        <span class="date">2018 - Present</span>
+        <div class="title">Engineering Degree</div>
+        <div class="company">Oxford University</div>
+        <div class="description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="icon-container"><i class="fas fa-paint-brush"></i></div>
+        <span class="date">2013 - 2018</span>
+        <div class="title">UI/UX Designer</div>
+        <div class="company">ThemeForest</div>
+        <div class="description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="icon-container"><i class="fas fa-user-graduate"></i></div>
+        <span class="date">2013 - 2018</span>
+        <div class="title">Master Degree</div>
+        <div class="company">Kiev University</div>
+        <div class="description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="icon-container"><i class="fas fa-bullhorn"></i></div>
+        <span class="date">2013 - 2018</span>
+        <div class="title">Consultant</div>
+        <div class="company">VideoHive</div>
+        <div class="description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="icon-container"><i class="fas fa-graduation-cap"></i></div>
+        <span class="date">2009</span>
+        <div class="title">Bachelor Degree</div>
+        <div class="company">Tunis High School</div>
+        <div class="description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </div>
+      </div>
+    </section>
+
+    <!-- Certificates -->
+    <section class="certificates">
+      <h2 class="section-title">Certificates</h2>
+
+      <div class="cert-container">
+        <div class="cert-item">
+          <i class="fas fa-certificate"></i>
+          <h3>Certified Web Developer</h3>
+          <p>Google - 2025</p>
+          <a
+            href="https://drive.google.com/your-cert-link1"
+            target="_blank"
+            class="cert-btn"
+            >View Certificate</a
+          >
+        </div>
+        <div class="cert-item">
+          <i class="fas fa-certificate"></i>
+          <h3>UI/UX Design Certification</h3>
+          <p>Coursera - 2024</p>
+          <a
+            href="https://drive.google.com/your-cert-link2"
+            target="_blank"
+            class="cert-btn"
+            >View Certificate</a
+          >
+        </div>
+        <div class="cert-item">
+          <i class="fas fa-certificate"></i>
+          <h3>JavaScript Mastery</h3>
+          <p>Udemy - 2024</p>
+          <a
+            href="https://drive.google.com/your-cert-link3"
+            target="_blank"
+            class="cert-btn"
+            >View Certificate</a
+          >
+        </div>
+        <div class="cert-item">
+          <i class="fas fa-certificate"></i>
+          <h3>Advanced React</h3>
+          <p>LinkedIn Learning - 2023</p>
+          <a
+            href="https://drive.google.com/your-cert-link4"
+            target="_blank"
+            class="cert-btn"
+            >View Certificate</a
+          >
+        </div>
+        <div class="cert-item">
+          <i class="fas fa-certificate"></i>
+          <h3>Python for Beginners</h3>
+          <p>Harvard CS50 - 2023</p>
+          <a
+            href="https://drive.google.com/your-cert-link5"
+            target="_blank"
+            class="cert-btn"
+            >View Certificate</a
+          >
+        </div>
+        <div class="cert-item">
+          <i class="fas fa-certificate"></i>
+          <h3>Responsive Web Design</h3>
+          <p>FreeCodeCamp - 2023</p>
+          <a
+            href="https://drive.google.com/your-cert-link6"
+            target="_blank"
+            class="cert-btn"
+            >View Certificate</a
+          >
+        </div>
+        <div class="cert-item">
+          <div class="cert-icon">
+              <i class="fas fa-certificate"></i>
+          </div>
+          <div class="cert-info">
+              <h3>WordPress Certification</h3>
+              <p class="cert-author">WordPress Academy - 2023</p>
+              <a href="https://drive.google.com/your-cert-link" target="_blank" class="cert-btn">View Certificate</a>
+          </div>
+      </div>
+      
+        <div class="cert-item">
+          <i class="fas fa-certificate"></i>
+          <h3>Backend Development</h3>
+          <p>Meta - 2022</p>
+          <a
+            href="https://drive.google.com/your-cert-link8"
+            target="_blank"
+            class="cert-btn"
+            >View Certificate</a
+          >
+        </div>
+      </div>
+    </section>
     <!-- Toggle Button -->
     <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
 
